--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,15 @@
     --primery-color: #4D5AE5;
     --headings-color: #2E2F42;
     --bodytext-color: #434455;
+    --primery-white-color: #ffff;
 }
 body {
-    font-family: 'Roboto', sans-serif;
     color: var(--bodytext-color);
-    background-color: #ffff;
+    background-color: var(--primery-white-color);
+    
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.02em;
+    line-height: 1.5;
 }
 ul {
     list-style: none;
@@ -15,62 +19,119 @@ a {
     text-decoration: none;
 }
 .header-logo {
+    color: var(--headings-color);
+
     font-family: 'Raleway', sans-serif;
-    color: var(--bodytext-color);
-    font-weight: 900;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.8;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
 }
 span{
     color: var(--primery-color);
 }
 /* Navigation style */
-.site-nav a {
+.site-nav .link {
     color: var(--headings-color);
+    
+    font-weight: 700;
 }
-.site-nav :hover, .site-nav :focus {
+.site-nav .link:hover, .site-nav a:focus {
     color: var(--bodytext-color);
 }
-.site-nav :active {
+.site-nav .link:active {
     color: var(--primery-color);
 }
-.auth-nav a {
+.auth-nav .link {
     color: var(--bodytext-color);
 }
-.auth-nav :hover,
-.auth-nav :focus {
-    color: var(--primery-color)
+.auth-nav .link:hover,
+.auth-nav .link:focus {
+    color: var(--primery-color);
 }
 /* Hero */
-.hero, .hero-title {
-    color: #ffff;
+.hero {
+    background: var(--headings-color);
 }
-/* Section style */
-.section, .section-title {
-    color: var(--headings-color);
-}
-/* Feuters style */
-.feutere-list, .title {
-    color: var(--headings-color);
-}
-/* Our team */
-.employees, .title {
-    color: var(--headings-color);
-}
-/* Footer */
-.footer-logo {
-    font-family: 'Raleway', sans-serif;
-    color: #F4F4FD;
-    font-weight: 900;
-    text-transform: uppercase;
+.hero-title {
+    color: var(--primery-white-color);
+    
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
 }
 /* Button */
-.button {
-    color: #ffff;
-    background-color: var(--primery-color);
+.btn-primery {
+    color: var(--primery-white-color);
+    background: var(--primery-color);
+    
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.19;
+    letter-spacing: 0.04em;
+
+    cursor: pointer;
 }
-.button :hover {
-    background-color: var(--primery-color);
+.btn-secondary {
+    color: var(--primery-color);
+    background: #E7E9FC;
+
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 0.04em;
+
+    cursor: pointer;
 }
-.button :active {
-    background-color: #404BBF;
+.btn-primery:hover,
+.btn-primery:focus {
+    background: var(--primery-color);
+}
+.btn-primery:active {
+    background: #404BBF;
+}
+.btn-secondary:active {
+    color: var(--primery-white-color);
+    background: #404BBF;
+}
+/* Section style */
+.section-title {
+    color: var(--headings-color);
+
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    text-transform: capitalize;
+}
+/* Features and Projects style */
+.features-list .title,
+.projects-list .title {
+    color: var(--headings-color);
+    
+    font-size: 20px;
+    line-height: 1.2;
+}
+
+/* Our employees */
+.employees-list .title {
+    color: var(--headings-color);
+}
+
+/* Footer */
+.footer .logo {
+    color: #F4F4FD;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.8;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+.footer {
+    background: var(--headings-color);
+}
+.footer .text {
+    color: #E7E9FC;    
 }
