--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,11 @@ body {
     background-color: var(--primery-white-color);
     
     font-family: 'Roboto', sans-serif;
-    letter-spacing: 0.02em;
-    line-height: 1.5;
 }
-ul {
+.mark {
     list-style: none;
 }
-a {
+.link {
     text-decoration: none;
 }
 .header .logo {
@@ -28,7 +26,7 @@ a {
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
-span{
+.logo-color {
     color: var(--primery-color);
 }
 
@@ -37,6 +35,8 @@ span{
     color: var(--headings-color);
     
     font-weight: 700;
+    letter-spacing: 0.02em;
+    line-height: 1.5;
 }
 .site-nav .link:hover, .site-nav a:focus {
     color: var(--bodytext-color);
@@ -46,6 +46,9 @@ span{
 }
 .auth-nav .link {
     color: var(--bodytext-color);
+
+    letter-spacing: 0.02em;
+    line-height: 1.5;
 }
 .auth-nav .link:hover,
 .auth-nav .link:focus {
@@ -61,6 +64,7 @@ span{
     
     font-size: 56px;
     line-height: 1.07;
+    letter-spacing: 0.02em;
     text-align: center;
 }
 
@@ -84,6 +88,7 @@ span{
     font-family: inherit;
     font-size: 16px;
     font-weight: 700;
+    line-height: 1.5;
     letter-spacing: 0.04em;
 
     cursor: pointer;
@@ -106,6 +111,7 @@ span{
 
     font-size: 36px;
     line-height: 1.11;
+    letter-spacing: 0.02em;
     text-align: center;
     text-transform: capitalize;
 }
@@ -115,6 +121,7 @@ span{
     color: var(--headings-color);
     
     font-size: 20px;
+    letter-spacing: 0.02em;
     line-height: 1.2;
 }
 
@@ -123,6 +130,7 @@ span{
     color: var(--headings-color);
 
     font-size: 20px;
+    letter-spacing: 0.02em;
     line-height: 1.2;
 }
 
@@ -131,7 +139,16 @@ span{
     color: var(--headings-color);
 
     font-size: 20px;
+    letter-spacing: 0.02em;
     line-height: 1.2;
+}
+
+/* Features, Employees and Projects style */
+.features-list .text,
+.employees-list .text,
+.projects-list .text {
+    letter-spacing: 0.02em;
+    line-height: 1.5;
 }
 
 /* Footer */
